Updated popup.html to 1.7.16
for clarification ;

" 1 " is the first year of the extension
" 7 " is the current month
" 16 " is the updated day

--- a/popup.html
+++ b/popup.html
@@ -4,16 +4,43 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <link rel="stylesheet" href="popup.css"/>
-  <title>Xzen ReddSwitcher</title>
+  <title>uSwitch: Reddit Accounts</title>
 </head>
 <body>
   <div class="container">
-    <h1>Xzen ReddSwitcher</h1>
+    <h1>uSwitch: Reddit Accounts</h1>
     <div class="save-section">
       <input id="accountName" type="text" placeholder="Account name"/>
       <button id="saveBtn">Save</button>
     </div>
     <ul id="accountsList"></ul>
+    <div class="footer">
+      <div class="footer-text">
+        Drag ≡ to reorder<br/>
+        Ctrl+Shift 1–4 to quick‑switch
+      </div>
+      <div class="footer-reviews">
+        Enjoying uSwitch?  
+        <a href="https://chrome.google.com/webstore/detail/phgceelfckbblkoenaaajalniclklcia" target="_blank">
+          Leave a review ✨
+        </a>
+      </div>
+      <div class="footer-icons">
+        <a href="https://www.patreon.com/Yuilix" target="_blank" class="donate-btn" title="Support on Patreon">
+          <img src="patreon.png" alt="Patreon"/>
+          <span>Donate</span>
+        </a>
+        <a href="https://github.com/LXRylex/Xzen_Reddit_Account_Switcher"
+           target="_blank"
+           class="icon-filter github-icon"
+           title="Source on GitHub">
+          <img src="github.png" alt="GitHub"/>
+        </a>
+        <a href="https://xzentosia.neocities.org/portfolio/" target="_blank" class="icon-filter" title="My Other Projects">
+          <img src="xzen.png" alt="Link"/>
+        </a>
+      </div>
+    </div>
   </div>
 
   <div id="editModal" class="modal hidden">
